test/asm/label-macro-arg.err
error: label-macro-arg.asm(38) -> label-macro-arg.asm::test_char(25):
    syntax error, unexpected local label, expecting symbol or string symbol
while expanding symbol "VAR_DEF"
error: label-macro-arg.asm(38) -> label-macro-arg.asm::test_char(26):
    syntax error, unexpected local label, expecting symbol or string symbol
error: label-macro-arg.asm(38) -> label-macro-arg.asm::test_char(29):
    Interpolated symbol "sizeof_.something" does not exist
error: label-macro-arg.asm(39) -> label-macro-arg.asm::test_char(25):
    syntax error, unexpected label, expecting symbol or string symbol
while expanding symbol "VAR_DEF"
error: label-macro-arg.asm(39) -> label-macro-arg.asm::test_char(26):
    syntax error, unexpected label, expecting symbol or string symbol
error: label-macro-arg.asm(39) -> label-macro-arg.asm::test_char(29):
    Invalid format spec 'sizeof_'
error: label-macro-arg.asm(39) -> label-macro-arg.asm::test_char(29):
    Interpolated symbol "something" does not exist
error: Assembly aborted (7 errors)!
